# NativeDemo

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/xvisio/xslam/: MainActivity.java  MyApplication.java
app/src/main/res/layout/: activity_main.xml
asrsdk/: README.md  build.gradle
asrsdk/src/androidTest/java/com/xv/asrsdk/: ExampleInstrumentedTest.java
asrsdk/src/test/java/com/xv/asrsdk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
xvsdk/: build.gradle
xvsdk/src/main/cpp/: CMakeLists.txt
xvsdk/src/main/cpp/wrapper/: CMakeLists.txt  fps_count.hpp  xslam_android.cpp
xvsdk/src/main/cpp/xvsdk/doc/: classxv_1_1ColorCamera-members.html  classxv_1_1ColorCamera.html  classxv_1_1TofCamera-members.html  classxv_1_1TofCamera.html  functions_func.html  xv-sdk_8h_source.html
xvsdk/src/main/cpp/xvsdk/doc/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+66 more)
xvsdk/src/main/cpp/xvsdk/include/: unity-wrapper.h  xv-sdk-c.h  xv-sdk-ex.h  xv-sdk.h  xv-types.h
xvsdk/src/main/cpp/xvsdk/include2/: xv-sdk-ex.h  xv-sdk-private.h
xvsdk/src/main/cpp/xvsdk/unity-wrapper/: unity-wrapper.cpp
xvsdk/src/main/cpp/xvwrapper/: CMakeLists.txt  xv-wrapper.h  xv_wrapper.cpp
xvsdk/src/main/cpp/xvwrapper/customer/: test.cpp  test.h
(+9 files in other folders)
